Fixed some overflow issues in small devices & rearranged code

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  
 }
 
 body {
@@ -15,6 +16,20 @@ body {
   margin-right: auto;
 }
 
+/* Design for the heading section */
+.headings {
+  margin-top: 2.5rem;
+}
+
+.subHeading, .mainHeading {
+  text-align: center;
+  margin-top: 1rem;
+  background: -webkit-linear-gradient(rgb(255, 213, 27), #3cd4fe);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* Input Section */
 .inputOptions {
   width: 35rem;
   height: 3.5rem;
@@ -34,19 +49,7 @@ body {
   justify-content: center;
 }
 
-.headings {
-  margin-top: 2.5rem;
-}
-
-.subHeading, .mainHeading {
-  text-align: center;
-  margin-top: 1rem;
-  background: -webkit-linear-gradient(rgb(255, 213, 27), #3cd4fe);
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.inputOptions .left input {
+.inputOptions .left-input input {
   width: 97%;
   height: 90%;
   margin-top: .8%;
@@ -59,34 +62,14 @@ body {
   background: transparent;
 }
 
-.inputOptions .middle {
+.inputOptions .middle-input, .inputOptions .right-input {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.inputOptions .right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.list-sec {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 2rem;
-}
-
-.list-sec .container {
-  width: 30%;
-  min-width: 27rem;
-  margin-right: 1rem;
-  margin-left: 1rem;
-  border-radius: .5rem;
-
-}
-
+/* Design for all i tags */
 i {
   cursor: pointer;
 }
@@ -102,19 +85,19 @@ i {
 }
 
 .container .toDo .bin i {
-  color: rgb(69, 69, 69);
+  color: rgb(62, 61, 61);
 }
 
 .container .toDo .close i {
-  color: brown;
+  color: rgb(204, 22, 22);
 }
 
 .container .toDo .tick i {
-  color: green;
+  color: rgb(8, 118, 8);
 }
 
 .container .toDo .recycle i {
-  color: rgb(46, 75, 164);
+  color: rgb(0, 64, 254);
 }
 
 .container i {
@@ -124,6 +107,22 @@ i {
 
 .container .toDo .bin i {
   color: rgb(69, 69, 69);
+}
+
+/* List display section */
+.list-sec {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.list-sec .container {
+  width: 30%;
+  min-width: 27rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  border-radius: .5rem;
 }
 
 .container {
@@ -141,7 +140,7 @@ i {
 }
 
 .container .toDo {
-  width: 90%;
+  width: 92%;
   height: 100%;
   background-color: rgb(241, 241, 241, 0.2);
   margin-top: .5rem;
@@ -153,7 +152,7 @@ i {
 
 .container .toDo:hover {
   background-color: rgba(241, 241, 241, 0.313);
-  scale: 1.04;
+  width: 95%;
 }
 
 .container .toDo .top p {
@@ -169,32 +168,9 @@ i {
   cursor: default;
 }
 
+/* Background Color for each list sections */
 .container.onGoing {
   background-color: #03a5d6;
-}
-
-.container.onGoing .toDo {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto;
-}
-
-.container.onGoing .toDo .top {
-  width: 20rem;
-}
-
-.container.onGoing .toDo .left {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-
-.container.onGoing .toDo .right {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 3;
 }
 
 .container.done {
@@ -202,60 +178,59 @@ i {
 
 }
 
-.container.done .toDo {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto;
-}
-
-.container.done .toDo .top {
-  width: 20rem;
-}
-
-.container.done .toDo .left {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-
-.container.done .toDo .right {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-
 .container.dropped {
   background-color: #fd2f2f;
 }
 
-.container.dropped .toDo {
+/* For showing items inside the container */
+.container.dropped .toDo, .container.done .toDo, .container.onGoing .toDo {
   display: grid;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto;
 }
 
-.container.dropped .toDo .top {
-  width: 20rem;
+.container.dropped .toDo .top, .container.done .toDo .top, .container.onGoing .toDo .top {
+  margin-left: 1rem;
+  margin-right: 1rem;
   word-wrap: break-word;
 }
 
-.container.dropped .toDo .left {
+.container.dropped .toDo .left, .container.done .toDo .left, .container.onGoing .toDo .left {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 3;
 }
 
-.container.dropped .toDo .right {
+.container.dropped .toDo .right, .container.done .toDo .right, .container.onGoing .toDo .right{
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 3;
 }
+.left, .right{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 3rem;
+}
+.done .left{
+  width:1rem;
+}
+.right{
+  margin-left: auto;
+}
+.top{
+  display: flex;
+  justify-items: flex-start;
+}
+.bottom{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
 
-@media only screen and (max-width:950px) and (min-width:431px) {
+/* For medium screen devices */
+@media only screen and (max-width:950px) and (min-width:430px) {
   .list-sec .container {
     width: 30rem;
     margin-right: 1rem;
@@ -273,43 +248,29 @@ i {
     width: 24rem;
   }
 
-  .container.done .toDo .top {
-    width: 20rem;
-  }
-
-  .container.onGoing .toDo .top {
-    width: 18rem;
-    margin-left: .7rem;
-  }
-
-  .container.onGoing .toDo .bottom {
-    width: 18rem;
-    margin-left: .7rem;
-  }
-
-  .container.dropped .toDo .top {
-    width: 18rem;
-    margin-left: .7rem;
-  }
-
-  .container.dropped .toDo .bottom {
-    margin-left: .7rem;
+  .left, .right{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 2rem;
   }
 }
 
-@media only screen and(max-width:430px){
+/* For small screen devices */
+@media only screen and (max-width:430px) {
   .list-sec .container {
     width:90%;
+    min-width: 24rem;
     margin-right: 1rem;
     margin-left: 1rem;
     border-radius: .5rem;
   }
   .list-sec {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: center;
+    align-items: center;
   }
   .container {
     width: 90%;
@@ -318,16 +279,12 @@ i {
   .inputOptions {
     width: fit-content;
   }
-
-  .container.done .toDo .top {
-    width: 80vw;
-  }
-
-  .container.onGoing .toDo .top {
-    width: 70vw;
-  }
-
-  .container.dropped .toDo .top {
-    width: 70vw;
+  
+  .left, .right{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 2rem;
   }
 }
+
